--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,16 @@ edition = "2021"
 askama = { version = "0.12.1", features = ["with-axum"] }
 askama_axum = "0.4.0"
 axum = "0.7.3"
-serde = "1.0.195"
+serde = { version = "1.0.195", features = ["derive"] }
 serde_json = "1.0.111"
 shuttle-axum = "0.36.0"
 shuttle-runtime = "0.36.0"
 shuttle-shared-db = { version = "0.36.0", features = ["postgres"] }
-sqlx = "0.7.3"
+sqlx = { version = "0.7.3", features = ["macros", "uuid"] }
+thiserror = "1.0.56"
+time = { version = "0.3.31", features = ["serde"] }
 tokio = "1.28.2"
 tokio-stream = { version = "0.1.14", features = ["sync"] }
+tower-http = { version = "0.5.1", features = ["fs"] }
 tracing = "0.1.40"
+uuid = { version = "1.7.0", features = ["serde"] }
